# research-cli

./: .gitignore  .gitmodules  .npmrc  CONTRIBUTING.md  CROSS_PLATFORM_RELEASE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  INSTALLATION.md  MANUAL_RELEASE_GUIDE.md  Makefile  README-DEPLOYMENT.md  README.md  README_INSTALL.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.2.md  RESEARCH_TERMINAL_SUMMARY.md  TAURI_SUCCESS.md  UPSTREAM_MERGING_SUMMARY.md  baidu_latex_improved.js  check-build-status.sh  demo-packaging.md  esbuild.config.js  eslint.config.js  final-check.sh  individual-command-test-report.json  install-simple.ps1  install.ps1  install.sh  latex_test_summary.md  linux-fix.sh  monitor-build.sh  package-lock.json  package.json  pnpm-lock.yaml  qianwen_latex_demo.js  quick-check.sh  quick-deploy.sh  research-cli-promo.md  research-cli-social-promo.md  (+12 more)
.gcp/: Dockerfile.research-code-builder  release-docker.yaml
.gemini/: config.yaml
.github/: CODEOWNERS
blogs/: research-cli-tech-blog-en.md  research-cli-tech-blog-short-en.md  research-cli-tech-blog-v2.md
dist-native/: README-CROSS-PLATFORM.md  README.md  RELEASE_NOTES.md  install-complete.sh  install.sh  release-notes-available.md  release-notes-local.md  release-notes.md  research-cli-darwin-arm64  research-cli-darwin-arm64.json  research-cli-darwin-x64  research-cli-darwin-x64.json
dist-pkg/: release-info.json
docs/: Uninstall.md  architecture.md  checkpointing.md  cross-platform-release.md  deployment.md  extension.md  github-actions-build.md  index.md  integration-tests.md  npm.md  packaging.md  quota-and-pricing.md  sandbox.md  tauri-desktop.md  telemetry.md  tos-privacy.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
(+125 files in other folders)
