[package]
name = "research-cli"
version = "0.2.6"
description = "AI-powered research and development CLI tool"
authors = ["Iechor Research"]
license = "Apache-2.0"
repository = "https://github.com/iechor-research/research-cli"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.1.1", features = [ "tray-icon"] }
tauri-plugin-shell = "2.0.1"
tauri-plugin-fs = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-notification = "2.0.1"

tauri-plugin-clipboard-manager = "2.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
default = ["custom-protocol"]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
