[package]
name = "research-cli"
version = "0.2.1"
description = "AI-powered research and development CLI tool"
authors = ["Iechor Research"]
license = "Apache-2.0"
repository = "https://github.com/iechor-research/research-cli"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No dependencies needed for a simple wrapper

[[bin]]
name = "research-cli"
path = "src/main.rs"
